// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TinyMceWidget snapshots ImageUploadModal is not rendered 1`] = `
<Fragment>
  <SourceCodeModal
    close={[MockFunction modal.closeModal]}
    editorRef={
      Object {
        "current": Object {
          "value": "something",
        },
      }
    }
    isOpen={false}
  />
  <Editor
    disabled={false}
    editorConfig={
      Object {
        "clearSelection": [MockFunction hooks.selectedImage.clearSelection],
        "editorContentHtml": undefined,
        "editorRef": Object {
          "current": Object {
            "value": "something",
          },
        },
        "editorType": "text",
        "images": Object {
          "current": Array [
            Object {
              "externalUrl": "/assets/sOmEaSsET",
            },
          ],
        },
        "isLibrary": true,
        "lmsEndpointUrl": "sOmEvaLue.cOm",
        "openImgModal": [MockFunction modal.openModal],
        "openSourceCodeModal": [MockFunction modal.openModal],
        "selection": "hooks.selectedImage.selection",
        "setSelection": [MockFunction hooks.selectedImage.setSelection],
        "studioEndpointUrl": "sOmEoThERvaLue.cOm",
      }
    }
    id="sOMeiD"
  />
</Fragment>
`;

exports[`TinyMceWidget snapshots SourcecodeModal is not rendered 1`] = `
<Fragment>
  <ImageUploadModal
    clearSelection={[MockFunction hooks.selectedImage.clearSelection]}
    close={[MockFunction modal.closeModal]}
    editorRef={
      Object {
        "current": Object {
          "value": "something",
        },
      }
    }
    editorType="problem"
    images={
      Object {
        "current": Array [
          Object {
            "externalUrl": "/assets/sOmEaSsET",
          },
        ],
      }
    }
    isOpen={false}
    lmsEndpointUrl="sOmEvaLue.cOm"
    selection="hooks.selectedImage.selection"
    setSelection={[MockFunction hooks.selectedImage.setSelection]}
  />
  <Editor
    disabled={false}
    editorConfig={
      Object {
        "clearSelection": [MockFunction hooks.selectedImage.clearSelection],
        "editorContentHtml": undefined,
        "editorRef": Object {
          "current": Object {
            "value": "something",
          },
        },
        "editorType": "problem",
        "images": Object {
          "current": Array [
            Object {
              "externalUrl": "/assets/sOmEaSsET",
            },
          ],
        },
        "isLibrary": false,
        "lmsEndpointUrl": "sOmEvaLue.cOm",
        "openImgModal": [MockFunction modal.openModal],
        "openSourceCodeModal": [MockFunction modal.openModal],
        "selection": "hooks.selectedImage.selection",
        "setSelection": [MockFunction hooks.selectedImage.setSelection],
        "studioEndpointUrl": "sOmEoThERvaLue.cOm",
      }
    }
    id="sOMeiD"
  />
</Fragment>
`;

exports[`TinyMceWidget snapshots renders as expected with default behavior 1`] = `
<Fragment>
  <ImageUploadModal
    clearSelection={[MockFunction hooks.selectedImage.clearSelection]}
    close={[MockFunction modal.closeModal]}
    editorRef={
      Object {
        "current": Object {
          "value": "something",
        },
      }
    }
    editorType="text"
    images={
      Object {
        "current": Array [
          Object {
            "externalUrl": "/assets/sOmEaSsET",
          },
        ],
      }
    }
    isOpen={false}
    lmsEndpointUrl="sOmEvaLue.cOm"
    selection="hooks.selectedImage.selection"
    setSelection={[MockFunction hooks.selectedImage.setSelection]}
  />
  <SourceCodeModal
    close={[MockFunction modal.closeModal]}
    editorRef={
      Object {
        "current": Object {
          "value": "something",
        },
      }
    }
    isOpen={false}
  />
  <Editor
    disabled={false}
    editorConfig={
      Object {
        "clearSelection": [MockFunction hooks.selectedImage.clearSelection],
        "editorContentHtml": undefined,
        "editorRef": Object {
          "current": Object {
            "value": "something",
          },
        },
        "editorType": "text",
        "images": Object {
          "current": Array [
            Object {
              "externalUrl": "/assets/sOmEaSsET",
            },
          ],
        },
        "isLibrary": false,
        "lmsEndpointUrl": "sOmEvaLue.cOm",
        "openImgModal": [MockFunction modal.openModal],
        "openSourceCodeModal": [MockFunction modal.openModal],
        "selection": "hooks.selectedImage.selection",
        "setSelection": [MockFunction hooks.selectedImage.setSelection],
        "studioEndpointUrl": "sOmEoThERvaLue.cOm",
      }
    }
    id="sOMeiD"
  />
</Fragment>
`;
